--- a/KidsAR-Android/app/src/main/res/drawable/button_back_icon_noshad.xml
+++ b/KidsAR-Android/app/src/main/res/drawable/button_back_icon_noshad.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="5dp" />
-            <gradient android:angle="-90" android:endColor="@color/button_icon_color" android:startColor="@color/button_icon_color" />
+            <gradient android:angle="-90" android:endColor="@color/white" android:startColor="@color/white" />
         </shape>
     </item>
 </selector>
