--- a/KidsAR-Android/app/src/main/res/drawable/buy_back.xml
+++ b/KidsAR-Android/app/src/main/res/drawable/buy_back.xml
@@ -3,8 +3,8 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="5dp" />
-            <stroke android:width="1dip" android:color="@color/colorHome" />
-            <gradient android:angle="-90" android:endColor="@color/colorHome" android:startColor="@color/colorHome" />
+            <stroke android:width="1dip" android:color="@color/green" />
+            <gradient android:angle="-90" android:endColor="@color/green" android:startColor="@color/green" />
         </shape>
     </item>
 </selector>
