--- a/KidsAR-Android/app/src/main/res/layout/activity_privacy.xml
+++ b/KidsAR-Android/app/src/main/res/layout/activity_privacy.xml
@@ -2,15 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/home_background"
     android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/background" />
 
     <RelativeLayout
         android:id="@+id/tool_layout"
@@ -25,21 +18,35 @@
             android:layout_height="35dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:layout_gravity="center"
             android:layout_marginStart="15dp"
             android:padding="5dp"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_close" />
+            android:src="@drawable/cancel" />
 
         <TextView
             android:id="@+id/prefences"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:fontFamily="@font/comic_sans_ms_bold"
-            android:text="Privacy"
+            android:fontFamily="@font/gothamrounded_bold"
+            android:text="Privacy Policy"
             android:textAllCaps="false"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorHome"
             android:textSize="25sp" />
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="center"
+            android:layout_margin="2dp"
+            android:layout_marginEnd="10dp"
+            android:indeterminateTint="@color/colorHome"
+            android:scrollbarSize="30dp"
+            android:scrollbarStyle="outsideOverlay"
+            android:visibility="visible" />
 
     </RelativeLayout>
 
@@ -55,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:fontFamily="@font/comic_sans_ms"
+        android:fontFamily="@font/gothamrounded_light"
         android:text="@string/copyrights"
         android:textAlignment="center"
         android:textAllCaps="false"
