--- a/KidsAR-Android/app/src/main/res/layout/alphapets_item.xml
+++ b/KidsAR-Android/app/src/main/res/layout/alphapets_item.xml
@@ -1,58 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-        <!--<android.support.v7.widget.CardView-->
-            <!--android:layout_width="105dp"-->
-            <!--android:layout_height="130dp"-->
-            <!--app:cardElevation="10dp"-->
-            <!--app:cardCornerRadius="5dp"-->
-            <!--&gt;-->
-    <LinearLayout
-        android:layout_width="75dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-         <LinearLayout
-             android:layout_width="75dp"
-             android:layout_height="75dp"
-             >
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/layout_circle"
-            >
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/alphapets"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="8dp"
-                android:scaleType="fitXY"/>
-            <ImageView
-                android:layout_width="17dp"
-                android:layout_height="17dp"
-                android:id="@+id/lock"
-                android:src="@drawable/padlock"
-                android:layout_alignParentRight="true"
-                android:visibility="visible"
-                android:layout_marginTop="3dp"/>
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-        </RelativeLayout>
-         </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="85dp"
         android:layout_height="wrap_content"
-        android:id="@+id/alphapet_label"
-        android:text="Labell"
-        android:textSize="16sp"
-        android:textColor="@color/ar_white"
-        android:fontFamily="@font/comic_sans_ms_bold"
-        android:layout_marginBottom="12dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="2dp"/>
+        android:layout_gravity="center"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:padding="7dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/layout_circle">
+
+                <ImageView
+                    android:id="@+id/alphapets"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="3dp"
+                    android:scaleType="fitXY" />
+
+                <ImageView
+                    android:id="@+id/lock"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="1dp"
+                    android:src="@drawable/padlock"
+                    android:visibility="visible" />
+
+            </RelativeLayout>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/alphapet_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/gothamrounded_medium"
+            android:text="Labell"
+            android:textColor="@color/ar_white"
+            android:textSize="18sp" />
     </LinearLayout>
-        <!--</android.support.v7.widget.CardView>-->
 </LinearLayout>
