--- a/KidsAR-Android/app/src/main/res/layout/kidmodel_item.xml
+++ b/KidsAR-Android/app/src/main/res/layout/kidmodel_item.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="225dp"
-    android:layout_height="360dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linearkid"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    card_view:cardBackgroundColor="@color/cardbackground"
-    card_view:cardCornerRadius="0dp">
+    android:layout_margin="5dp"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/kidmodel_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:adjustViewBounds="true"
         android:contentDescription="Kid Model"
         android:scaleType="fitXY"
-        android:src="@drawable/alphabet" />
-</android.support.v7.widget.CardView>
+        android:visibility="visible" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ram"
+        android:visibility="gone" />
+</LinearLayout>
