--- a/KidsAR-Android/app/src/main/res/values/colors.xml
+++ b/KidsAR-Android/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#00C5FB</color>
     <color name="colorPrimaryDark">#006CF9</color>
     <color name="colorAccent">#FF5D9A</color>
+    <color name="colorHome">#5ACAFA</color>
     <color name="solid_blue">#47BFFB</color>
     <color name="solid_water_blue_light">#805abcd8</color>
     <color name="cardbackground">#2000C5FB</color>
@@ -15,6 +16,7 @@
     <color name="white">#FFFFFF</color>
     <color name="gray">#A6A6A6</color>
     <color name="darkgray">#AA000000</color>
+    <color name="dark">#929292</color>
     <color name="brown">#AA7942</color>
     <color name="ar_neet_theme">#27ae60</color>
     <color name="ar_white">#FFFFFF</color>
@@ -25,5 +27,6 @@
     <color name="trans_related_label">#80FFFFFF</color>
     <color name="settings_apply">#5927ae60</color>
     <color name="disabled_color">#80AAAFB4</color>
-    <color name="gallery_line_color">#FFD944</color>
+    <color name="gallery_line_color">#F7DC47</color>
+    <color name="green">#008F00</color>
 </resources>
