--- a/KidsAR-Android/app/src/main/res/layout/activity_arview.xml
+++ b/KidsAR-Android/app/src/main/res/layout/activity_arview.xml
@@ -9,7 +9,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/background"
+        android:id="@+id/ar_background_image"
+        android:src="@drawable/color_header"
         android:scaleType="centerCrop"
         android:visibility="visible"/>
     <RelativeLayout
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/model_name"
             android:text="Animals"
-            android:textSize="25sp"
+            android:textSize="22sp"
             android:textColor="@color/ar_white"
             android:singleLine="true"
             android:layout_toRightOf="@+id/custom_navigation"
@@ -55,7 +56,8 @@
         android:background="@drawable/camera"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="10dp"
-        android:layout_toLeftOf="@+id/button_view_one"/>
+        android:layout_toLeftOf="@+id/button_view_one"
+        android:visibility="gone"/>
         <View
             android:layout_width="30dp"
             android:layout_height="40dp"
@@ -70,7 +72,8 @@
         android:background="@drawable/volume"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/button_view_one"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:visibility="gone"/>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
