--- a/KidsAR-Android/app/src/main/res/layout/settings_name_layout.xml
+++ b/KidsAR-Android/app/src/main/res/layout/settings_name_layout.xml
@@ -7,13 +7,12 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp">
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/comic_sans_ms"
+        android:fontFamily="@font/gothamrounded_book"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
         android:text="Please Enter Your Name"
@@ -27,7 +26,7 @@
         android:background="@drawable/edittext_round_back_border"
         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
         android:focusable="true"
-        android:fontFamily="@font/comic_sans_ms"
+        android:fontFamily="@font/gothamrounded_book"
         android:padding="5dp"
         android:singleLine="true"
         android:textAllCaps="true"
@@ -46,24 +45,22 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_margin="5dp"
-            android:alpha=".6"
             android:background="@drawable/button_back_icon"
-            android:fontFamily="@font/comic_sans_ms"
+            android:fontFamily="@font/gothamrounded_book"
             android:padding="5dp"
             android:text="Cancel"
-            android:textColor="@color/white" />
+            android:textColor="@color/ar_white" />
 
         <Button
             android:id="@+id/savename"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_margin="5dp"
-            android:alpha=".6"
             android:background="@drawable/button_back_icon"
-            android:fontFamily="@font/comic_sans_ms"
+            android:fontFamily="@font/gothamrounded_book"
             android:padding="5dp"
             android:text="Save"
-            android:textColor="@color/white" />
+            android:textColor="@color/ar_white" />
     </LinearLayout>
 
 </LinearLayout>
